<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/listaAlbum">

    <fragment
        android:id="@+id/listaAlbum"
        android:name="com.example.vinilos.ui.ListaAlbum"
        android:label="fragment_lista_album"
        tools:layout="@layout/fragment_lista_album" >
...
        android:id="@+id/listaColeccionista"
        android:name="com.example.vinilos.ui.ListaColeccionista"
        android:label="fragment_lista_coleccionista"
        tools:layout="@layout/fragment_lista_coleccionista" />

    <fragment
        android:id="@+id/opciones"
        android:name="com.example.vinilos.ui.Opciones.Opciones"
        android:label="fragment_opciones"
        tools:layout="@layout/fragment_opciones" >
        <action
            android:id="@+id/action_opciones_to_formCrearAlbum"
            app:destination="@id/formCrearAlbum" />
...
