...
                android:textAlignment="textStart"
                android:textColor="@color/purple_200"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/album_asociar_track_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@color/background"
                android:minHeight="48dip"
...
