...
                android:minHeight="30dp"
                android:src="@drawable/add_circle_icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/opciones_title" />

            <Button
                android:id="@+id/opciones_crear_album_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/opciones_crear_album_label"
                android:textColor="@android:color/transparent"
                app:layout_constrainedWidth="false"
...
